--- a/Gate1.ipynb
+++ b/Gate1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### data0 - all car images, including whole and damaged"
+    "### data0 - Car images, including whole and damaged"
    ]
   },
   {
