--- a/Gate3.ipynb
+++ b/Gate3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### data2a - 120416_0229\n",
-    "* re-run, trying regularization\n",
+    "*Regularization\n",
     "\n",
     "### data2a - 120116_1200\n",
     "* run with cleaned dataset, just on damage location, 256x256, ft 8 batch size, 88s per epoch, theano backend\n",
